[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_scenes/combat/scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://main_scenes/combat/scenes/CharacterDisplay.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.356863, 0.545098, 0.745098, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.356863, 0.545098, 0.745098, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="UI" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -600.0
margin_right = 400.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
character_info_scene = ExtResource( 2 )

[node name="PlayerPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -200.0
margin_right = 350.0
margin_bottom = -40.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="PrimaryButtons" type="ScrollContainer" parent="PlayerPanel"]
margin_left = 15.0
margin_top = 15.0
margin_right = 215.0
margin_bottom = 145.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="PlayerPanel/PrimaryButtons"]
margin_right = 200.0
margin_bottom = 86.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 2

[node name="Attack" type="ToolButton" parent="PlayerPanel/PrimaryButtons/GridContainer"]
margin_right = 90.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
text = "Attack"
clip_text = true

[node name="Special" type="ToolButton" parent="PlayerPanel/PrimaryButtons/GridContainer"]
margin_left = 110.0
margin_right = 200.0
margin_bottom = 22.0
rect_min_size = Vector2( 90, 0 )
text = "Special"
clip_text = true

[node name="Stance" type="ToolButton" parent="PlayerPanel/PrimaryButtons/GridContainer"]
margin_top = 32.0
margin_right = 90.0
margin_bottom = 54.0
rect_min_size = Vector2( 90, 0 )
text = "Stance"
clip_text = true

[node name="Item" type="ToolButton" parent="PlayerPanel/PrimaryButtons/GridContainer"]
margin_left = 110.0
margin_top = 32.0
margin_right = 200.0
margin_bottom = 54.0
rect_min_size = Vector2( 90, 0 )
text = "Item"
clip_text = true

[node name="Flee" type="ToolButton" parent="PlayerPanel/PrimaryButtons/GridContainer"]
margin_top = 64.0
margin_right = 90.0
margin_bottom = 86.0
rect_min_size = Vector2( 90, 0 )
text = "Flee"
clip_text = true

[node name="SecondaryButtons" type="ScrollContainer" parent="PlayerPanel"]
visible = false
margin_left = 15.0
margin_top = 15.0
margin_right = 215.0
margin_bottom = 145.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerPanel/SecondaryButtons"]
margin_right = 200.0
margin_bottom = 22.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 10

[node name="Back" type="ToolButton" parent="PlayerPanel/SecondaryButtons/VBoxContainer"]
margin_right = 200.0
margin_bottom = 22.0
text = "Back"
clip_text = true
align = 0

[node name="VSeparator" type="VSeparator" parent="PlayerPanel"]
margin_left = 230.0
margin_top = 10.0
margin_right = 234.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" type="VBoxContainer" parent="PlayerPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -450.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = 145.0
rect_min_size = Vector2( 435, 0 )
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPopup" type="PopupDialog" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -150.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogText" type="Label" parent="DialogPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -40.0
margin_right = 165.0
margin_bottom = 40.0
text = "Default popup text"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayerPanel/PrimaryButtons/GridContainer/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="PlayerPanel/PrimaryButtons/GridContainer/Special" to="." method="_on_Special_pressed"]
[connection signal="pressed" from="PlayerPanel/PrimaryButtons/GridContainer/Stance" to="." method="_on_Stance_pressed"]
[connection signal="pressed" from="PlayerPanel/PrimaryButtons/GridContainer/Item" to="." method="_on_Item_pressed"]
[connection signal="pressed" from="PlayerPanel/PrimaryButtons/GridContainer/Flee" to="." method="_on_Flee_pressed"]
[connection signal="pressed" from="PlayerPanel/SecondaryButtons/VBoxContainer/Back" to="." method="_on_Back_pressed"]
